objects/ssot__PresentationForum__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForumReferenceId__c</fullName>
        <label>Forum Reference</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForumReferenceObject__c</fullName>
        <label>Forum Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeolocationDateTime__c</fullName>
        <label>Geolocation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__GeolocationLatitude__c</fullName>
        <label>Geolocation Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeolocationLongitude__c</fullName>
        <label>Geolocation Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeolocationMissingReasonText__c</fullName>
        <label>Geolocation Missing Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Presentation Forum Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationId__c</fullName>
        <label>Presentation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800688230_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationForum_ForumReferenceId_m_rel</label>
        <referenceTo>ssot__ManagedEvent__dlm</referenceTo>
        <relationshipLabel>PresentationForum_ForumReferenceId_m_rel</relationshipLabel>
        <relationshipName>rel_1752800688230_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800700822_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationForum_ForumReferenceId_m_rel</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>PresentationForum_ForumReferenceId_m_rel</relationshipLabel>
        <relationshipName>rel_1752800700822_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>